Fix footer overflow

--- a/app/styles/footer.less
+++ b/app/styles/footer.less
@@ -12,11 +12,17 @@
 
 .Footer-container {
   margin: 2em -1.5em;
+  width: 100%;
 }
 
 .Footer-title {
   font-weight: 700;
   margin: 0 1.5em;
+}
+
+.Footer-links {
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .Footer-link {
